move to java 17